Complete HTML document structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- This is the head section of the page -->
+    <title>My Site Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <!-- This is the body of the page -->
+    <!-- You can add visible content here like headings, paragraphs, etc. -->
+  </body>
+</html>
